Migrate tests to AssertJ